--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -26,7 +26,7 @@
                 android:layout_marginTop="20dp"
                 android:layout_marginBottom="2dp"
                 android:scrollbars="horizontal"
-                android:text="My recent playlists"
+                android:text="My playlists"
                 android:textAllCaps="true"
                 android:textColor="#FFFFFF"
                 android:textSize="20sp" />
