--- a/app/src/main/res/layout/playlist_pop_up.xml
+++ b/app/src/main/res/layout/playlist_pop_up.xml
@@ -29,28 +29,11 @@
         android:layout_height="match_parent"
         android:fillViewport="true">
 
-
-        <TableLayout
-            android:id="@+id/tablePlaylist"
+        <LinearLayout
+            android:id="@+id/linearForSingle"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <TableRow
-                android:layout_width="match_parent"
-                android:layout_height="match_parent" />
-
-            <TableRow
-                android:layout_width="match_parent"
-                android:layout_height="match_parent" />
-
-            <TableRow
-                android:layout_width="match_parent"
-                android:layout_height="match_parent" />
-
-            <TableRow
-                android:layout_width="match_parent"
-                android:layout_height="match_parent" />
-        </TableLayout>
+            android:layout_height="wrap_content"
+            android:orientation="vertical"></LinearLayout>
     </ScrollView>
 
 </LinearLayout>
