--- a/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -6,17 +6,20 @@
         android:enabled="true"
         android:icon="@drawable/homeselector"
         android:title="Home"
+        app:itemIconTint="@drawable/homeselector"
         app:showAsAction="ifRoom" />
     <item
         android:id="@+id/newButtonBottomBar"
         android:enabled="true"
         android:icon="@drawable/newselector"
         android:title="NEWS"
+        app:itemIconTint="@drawable/newselector"
         app:showAsAction="ifRoom" />
     <item
         android:id="@+id/profileButtonBottomBar"
         android:enabled="true"
         android:icon="@drawable/profileselector"
         android:title="PROFILE"
+        app:itemIconTint="@drawable/profileselector"
         app:showAsAction="ifRoom" />
 </menu>
