--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,5 +5,6 @@
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
     <color name="ButtonBlue">#4A86E8</color>
+    <color name="White">#FFFFFF</color>
     <color name="Redlight">#482834</color>
 </resources>
